# fastga-rs

./: .chrV.bps  .gitignore  .gitmodules  .test.ktab.1  .test.ktab.10  .test.ktab.11  .test.ktab.12  .test.ktab.13  .test.ktab.14  .test.ktab.15  .test.ktab.16  .test.ktab.2  .test.ktab.3  .test.ktab.4  .test.ktab.5  .test.ktab.6  .test.ktab.7  .test.ktab.8  .test.ktab.9  .test1.bps  Cargo.toml  FASTGA_STATUS.md  INTEGRATION_FIX.md  INTEGRATION_PLAN.md  MAINTENANCE.md  MIGRATE_TO_ONECODE_RS_SEQ_NAMES.md  MIGRATION_COMPLETE.md  ONECODE_BUG_REPORT.md  RACE_CONDITION_ANALYSIS.md  README.md  README_IMPORTANT.md  RESPONSE_TO_SWEEPGA.md  RUST_ORCHESTRATION_SUMMARY.md  SWEEPGA_INTEGRATION_ISSUE.md  SWEEPGA_INTEGRATION_SOLUTION.md  UPDATING_FASTGA.md  aln_filter_wrapper.c  aln_filter_wrapper.h  build.rs  chrV.1gdb  (+18 more)
examples/: basic_alignment.rs  compare_outputs.rs  self_contained.rs  streaming_example.rs  sweepga_integration.rs  sweepga_write_alignments.rs  test_all_options.rs  test_basic.rs  verify_alignment.rs
src/: alignment.rs  aln_reader.rs  api.rs  binary_finder.rs  config.rs  embedded.rs  error.rs  ffi.rs  fork_api.rs  fork_runner.rs  integrated.rs  intermediate.rs  lib.rs  onelib.rs  orchestrator.rs  plane_sweep.rs  query_api.rs  query_complete.rs  query_processor.rs  query_set.rs  query_streaming.rs  runner.rs  simple_runner.rs  streaming.rs  streaming_backpressure.rs  timeout.rs
test_data/: test_mismatch.fasta  yeast_sample.fasta
tests/: advanced_integration.rs  ffi_integration_test.rs  ffi_test.rs  integration_demo.rs  integration_test.rs  minimal_hanging_test.rs  realistic_test.rs  (+12 more)
(+4 files in other folders)
