[package]
name = "fastga-rs"
version = "0.1.2"
edition = "2021"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
license = "MIT"
description = "Rust bindings for FastGA genome aligner with extended CIGAR support"
repository = "https://github.com/pangenome/fastga-rs"
keywords = ["genomics", "alignment", "bioinformatics", "fastga"]
categories = ["science", "api-bindings"]
exclude = [
    "target/",
    "data/",
    "deps/fastga/EXAMPLE/",
    "*.md",
    "!README.md",
    "!LICENSE",
]

[features]
default = ["zstd"]
# Enable zstd compression for ktab index files (requires libzstd >= 1.4.1)
zstd = []

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tempfile = "3.8"
libc = "0.2"
num_cpus = "1.16"
nix = { version = "0.27", features = ["fs", "process"] }
which = "6.0"
onecode = "0.1.0"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
